[package]
name = "crossbow"
version = "0.2.3"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Cross-Platform build tools and toolkit for games"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["build", "android", "ios", "tools"]
readme = "README.md"
exclude = ["assets/", "docs/"]

[dependencies]
thiserror = "1.0"
displaydoc = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

android-manifest = { version = "0.1.10", optional = true }
apple-bundle = { version = "0.1.4", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"
crossbow-android = { path = "platform/android", version = "0.2.3", optional = true }

[target.'cfg(target_os = "ios")'.dependencies]
crossbow-ios = { path = "platform/ios", version = "0.2.3", optional = true }

[patch.crates-io]
bevy = { git = "https://github.com/dodorare/bevy", rev = "732fc8c585ebd3a622153771a8c51ace93024a04" }
miniquad = { git = "https://github.com/not-fl3/miniquad", rev = "d67ffe6950cf73df307e2d23aaa4726f14399985" }

[features]
default = ["android", "ios"]
android = ["crossbow-android"]
ios = ["crossbow-ios"]
update-manifest = ["apple-bundle", "android-manifest"]

[workspace]
members = [
    "plugins/*",
    "crossbundle/*",
    "platform/*",
    "examples/*",
]
