[package]
name = "cargo-creator"
version = "0.2.1"
edition = "2018"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
description = "Tool that helps build apps for Android and iOS"
repository = "https://github.com/creator-rs/creator"
license = "Apache-2.0"
keywords = ["tool", "android", "ios"]
readme = "../../README.md"

[[bin]]
name = "creator"
path = "src/main.rs"

[dependencies]
creator-tools = { path = "../creator-tools", version = "0.2.1" }

clap = "3.0.0-beta.2"
cargo_toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dunce = "1.0"

thiserror = "1.0"
colored = "2.0"
displaydoc = "0.1"
env_logger = "0.8"
log = "0.4"

# dirs = "2.0.2"
# which = "4.0"

[features]
default = ["android", "ios"]
android = []
ios = []
