[package]
name = "creator-ads"
version = "0.3.5"
edition = "2018"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
description = "Mobile Game Framework"
repository = "https://github.com/creator-rs/creator"
license = "Apache-2.0"
keywords = ["ads", "android", "ios"]
readme = "../../README.md"

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.18"
