[package]
name = "creator-build"
version = "0.2.1"
edition = "2018"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
description = "Mobile Game Framework"
repository = "https://github.com/creator-rs/creator"
license = "Apache-2.0"
keywords = ["android", "ios"]
readme = "../../README.md"

[dependencies]
cargo_metadata = "0.12"

anyhow = "1.0"
thiserror = "1.0"
displaydoc = "0.1"
which = "4.0"

env_logger = "0.8"
log = "0.4"
