[package]
name = "creator-derive"
version = "0.4.0"
edition = "2018"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
description = "Mobile Game Framework"
repository = "https://github.com/creator-rs/creator"
license = "Apache-2.0"
keywords = ["derive", "android", "ios"]
readme = "../../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
