[package]
name = "creator-tools"
version = "0.2.1"
edition = "2018"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
description = "Mobile Game Framework"
repository = "https://github.com/creator-rs/creator"
license = "Apache-2.0"
keywords = ["android", "ios"]
readme = "../../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_plain = "0.3"
plist = { version = "1.0.1", package = "creator-plist" }
dunce = "1.0"
fs_extra = "1.2"
dirs = "3.0.1"
simctl = { version = "0.1.1", package = "creator-simctl" }

thiserror = "1.0"
displaydoc = "0.1"
which = "4.0"
tempfile = "3"
itertools = "0.10"

log = "0.4"
