[package]
name = "creator-tools"
version = "0.3.5"
edition = "2018"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
description = "Mobile Game Framework"
repository = "https://github.com/creator-rs/creator"
license = "Apache-2.0"
keywords = ["android", "ios"]
readme = "../../README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
serde_plain = "0.3"
plist = { version = "1.0.1", package = "creator-plist" }
dunce = "1.0"
fs_extra = "1.2"
dirs = "3.0.1"
simctl = { version = "0.1.1", package = "creator-simctl" }

thiserror = "1.0"
displaydoc = "0.1"
which = "4.0"
itertools = "0.10"
termcolor = "1.1.2"
atty = "0.2.14"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "basetsd",
  "handleapi",
  "processenv",
  "winbase",
  "wincon",
  "winnt",
]
