[package]
name = "crossbundle"
version = "0.1.3"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Build and publish apps for Android/iOS"
repository = "https://github.com/dodorare/crossbow"
license = "Apache-2.0"
keywords = ["tool", "android", "ios"]
readme = "README.md"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "crossbundle"
path = "src/crossbundle.rs"

[[bin]]
name = "cargo-crossbundle"
path = "src/main.rs"

[dependencies]
crossbundle-tools = { path = "../tools", version = "0.1.3" }
clap = { version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
dunce = "1.0"
thiserror = "1.0"
colored = "2.0"
displaydoc = "0.1"
pretty_env_logger = "0.4"
log = "0.4"
fs_extra = "1.2"
android-tools = "0.2.8"
dirs = "4.0.0"
ureq = "2.4.0"
cargo = "0.63.0"
cargo-util = "0.1.1"

[features]
default = ["android", "ios"]
android = []
ios = []
