[package]
name = "crossbundle"
version = "0.2.3"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Build and publish apps for Android/iOS"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["tool", "android", "ios"]
readme = "README.md"

[lib]
name = "crossbundle_lib"
path = "src/lib.rs"

[[bin]]
name = "crossbundle"
path = "src/main.rs"

[dependencies]
crossbow = { path = "../../", version = "0.2.3", default-features = false, features = ["update-manifest"] }
crossbundle-tools = { path = "../tools", version = "0.2.3", default-features = false }
android-tools = { version = "0.2.11", optional = true }
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
displaydoc = "0.2"
pretty_env_logger = "0.4"
log = "0.4"

fs_extra = "1.2"
dirs = "4.0"
dunce = "1.0"
ureq = { version = "2.5", features = ["tls"] }
cargo = "0.63.1"
cargo-util = "0.2.0"

[dev-dependencies]
tempfile = "3.3"

[features]
default = ["android", "apple"]
android = ["crossbow/android", "crossbundle-tools/android", "android-tools"]
apple = ["crossbow/ios", "crossbundle-tools/apple"]
