[package]
name = "crossbundle-derive"
version = "0.1.4"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Cross-Platform Rust Toolkit for Games 🏹"
repository = "https://github.com/dodorare/crossbow"
license = "Apache-2.0"
keywords = ["derive", "android", "ios"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
