[package]
name = "crossbundle-tools"
version = "0.2.3"
edition = "2021"
authors = ["DodoRare Team <support@dodorare.com>"]
description = "Build and publish apps for Android/iOS"
repository = "https://github.com/dodorare/crossbow"
license = "MIT OR Apache-2.0"
keywords = ["android", "ios"]
readme = "README.md"

[dependencies]
crossbow-android = { version = "0.2.3", path = "../../platform/android", default-features = false, features = ["embed"] }
# Apple crates
apple-bundle = { version = "0.1.4", optional = true }
simctl = { version = "0.1.1", package = "creator-simctl", optional = true }
# Android crates
android-manifest = { version = "0.2.0", optional = true }
android-tools = { version = "0.2.11", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde_plain = "1.0"

dunce = "1.0"
fs_extra = "1.3"
dirs = "5.0"
which = "6.0"
tempfile = "3.10"
zip = "0.6"
image = { version = "0.24.3", default-features = false, features = ["png", "jpeg"] }

itertools = "0.12"
cargo = "0.77"
cargo-util = "0.2"

thiserror = "1.0"
anyhow = "1.0"
displaydoc = "0.2"
log = "0.4"
termcolor = "1.4"
atty = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
fwdansi = "1.1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
  "basetsd",
  "handleapi",
  "processenv",
  "winbase",
  "wincon",
  "winnt",
]

[features]
default = ["android", "apple"]
android = ["android-manifest", "android-tools"]
apple = ["apple-bundle", "simctl"]
