[package]
name = "twod"
version = "0.2.0"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = "1.0"
bevy = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.2", features = ["logger"] }
android_logger = "0.9"

[lib]
name = "twodlib"
crate-type = ["lib", "cdylib"]

[package.metadata.android]
apk_label = "Creator 2D"
fullscreen = true
assets = "assets"
res = "res"
icon = "@mipmap/ic_launcher"
target_sdk_version = 29
min_sdk_version = 16
build_targets = ["aarch64-linux-android"]
