[package]
name = "twod"
version = "0.3.8"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
creator = { version = "0.3.8", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = { git = "https://github.com/bevyengine/bevy", rev = "7be096a254e86bd6388d96ea10b56b9ed6210685" }

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "assets"
res = "res/android"

[package.metadata.android.manifest]
apk_label = "Creator 2D"
fullscreen = true
icon = "@mipmap/ic_launcher"
target_sdk_version = 30
min_sdk_version = 16

[package.metadata.apple]
build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
assets = "assets"
res = "res/apple"

[package.metadata.apple.info-plist]
bundle_name = "Creator 2D"
bundle_identifier = "com.enfipy.twod"
bundle_executable = "twod"
bundle_development_region = "en"
bundle_version = "1"
bundle_info_dictionary_version = "1.0"
bundle_short_version_string = "1.0"
bundle_package_type = "APPL"
launch_storyboard_name = "launch_storyboard_name"
requires_full_screen = false
supported_interface_orientations = ["portrait", "portrait-upside-down", "landscape-left", "landscape-right"]
