[package]
name = "threed"
version = "0.2.1"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
creator = { version = "0.2.1", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = "0.4"

[lib]
# name = "threedlib"
crate-type = ["lib", "cdylib"]

[package.metadata.android]
apk_label = "Creator 3D"
fullscreen = true
assets = "assets"
res = "res/android"
icon = "@mipmap/ic_launcher"
target_sdk_version = 29
min_sdk_version = 16
build_targets = ["aarch64-linux-android"]

[package.metadata.apple]
build_targets = ["x86_64-apple-ios"]
assets = "assets"
res = "res/apple"

[package.metadata.apple.info-plist]
bundle_name = "Creator 3D"
bundle_identifier = "com.enfipy.threed"
bundle_executable = "threed"
bundle_development_region = "en"
bundle_version = "1"
bundle_info_dictionary_version = "1.0"
bundle_short_version_string = "1.0"
bundle_package_type = "APPL"
launch_storyboard_name = "launch_storyboard_name"
requires_full_screen = true
supported_interface_orientations = ["portrait", "portrait-upside-down", "landscape-left", "landscape-right"]
