[package]
name = "threed"
version = "0.4.1"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2021"

[dependencies]
creator = { version = "0.4.1", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = { git = "https://github.com/creator-rs/bevy.git", rev = "3ebf26249b698c8379443f73a1cbeb57779e3e6d" }

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata]
app_name = "Creator 3D"
target_sdk_version = 30
version_code = "1"
icon = "ic_launcher"

android_build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]
android_assets = "assets"
android_res = "res/android"

apple_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
apple_assets = "assets"
apple_res = "res/apple"
