[package]
name = "mac"
version = "0.4.1"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
creator = { version = "0.4.1", path = "../../" }
log = "0.4"
anyhow = "1.0"
macroquad = "0.3"

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata]
app_name = "Creator 3D"
target_sdk_version = 30
version_code = "1"
icon = "rust"

android_build_targets = ["aarch64-linux-android"]
android_assets = "assets"
android_res = "res/android"

apple_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
apple_assets = "assets"
apple_res = "res/apple"
