[package]
name = "app"
version = "0.1.1"
authors = ["enfipy <enfipy@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
anyhow = "1.0"
itertools = { version = "0.9", optional = true }
substrate-subxt = { version = "0.13", optional = true }
# bevy = "0.2.1"
# bevy = { path = "../../../bevy" }
bevy = { git = "https://github.com/creator-rs/bevy", branch = "android" }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = { version = "0.2", features = ["logger"] }
android_logger = "0.9"

[features]
default = []
explorer = ["substrate-subxt"]
paint = ["itertools"]

[lib]
# name = "applib"
crate-type = ["lib", "cdylib"]

[package.metadata.android]
apk_label = "Creator"
fullscreen = false
assets = "assets"
res = "res"
icon = "@mipmap/ic_launcher"
target_sdk_version = 29
min_sdk_version = 16
# build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
build_targets = ["aarch64-linux-android"]
