[package]
name = "bevy-2d"
version = "0.1.7"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = { version = "0.1.7", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = { version = "0.7.0", features = ["mp3"] }

[package.metadata]
app_name = "Bevy 2D"
assets = "../../assets"

[package.metadata.android]
release_targets = ["aarch64-linux-android"]
res = "res/android"

[package.metadata.apple]
release_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
res = "res/apple"
