[package]
name = "bevy-2d"
version = "0.2.0"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = { version = "0.2.0", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = { version = "0.8.0", default-features = false, features = ["bevy_winit", "render", "bevy_asset"] }

[package.metadata]
app_name = "Bevy 2D"
assets = ["../../assets"]

[package.metadata.android]
release_build_targets = ["aarch64-linux-android"]
resources = ["../../assets/res/android"]

[package.metadata.apple]
release_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
resources = ["../../assets/res/apple"]
