[package]
name = "bevy-3d"
version = "0.1.3"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = { version = "0.1.3", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = "0.7.0"

[package.metadata.android]
app_name = "Bevy 3D"
target_sdk_version = 30
version_code = 1
icon = "ic_launcher"

build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]
assets = "assets"
res = "res/android"

[package.metadata.apple]
app_name = "Bevy 3D"
target_sdk_version = 30
version_code = 1
icon = "ic_launcher"

build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
assets = "assets"
res = "res/apple"
