[package]
name = "bevy-3d"
version = "0.1.7"
authors = ["DodoRare Team <support@dodorare.com>"]
edition = "2021"

[dependencies]
crossbow = { version = "0.1.7", path = "../../" }
log = "0.4"
anyhow = "1.0"
bevy = "0.7.0"

[package.metadata]
app_name = "Bevy 3D"
assets = "../../assets"

[package.metadata.android]
release_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "i686-linux-android", "x86_64-linux-android"]
res = "res/android"

[package.metadata.apple]
release_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
res = "res/apple"
