[package]
name = "explorer"
version = "0.3.8"
authors = ["enfipy <enfipy@gmail.com>", "olvyko <olvyko@gmail.com>"]
edition = "2018"

[dependencies]
creator = { version = "0.3.8", path = "../../" }
log = "0.4"
anyhow = "1.0"
# substrate-subxt = { git = "https://github.com/paritytech/substrate-subxt", rev = "08a3e6574d38ed7908e163ac554b81b59e0b8a67" }
substrate-subxt = "0.14"
tokio = { version = "1.2", features = ["sync", "macros"] }
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc4fe9b186db3f32eef38fc4241289df480fa949" }
bevy = "0.4"

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata]
app_name = "Explorer"
target_sdk_version = 30
icon = "ic_launcher"

android_build_targets = ["aarch64-linux-android"]
android_assets = "assets"
android_res = "res/android"

apple_build_targets = ["aarch64-apple-ios", "x86_64-apple-ios"]
apple_assets = "assets"
apple_res = "res/apple"

# use_android_manifest = true
# android_manifest_path = "path/to/AndroidManifest.xml"

# use_info_plist = true
# info_plist_path = "path/to/Info.plist"
